--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Fuzion NFTs</title>
     <link
       rel="icon"
-      href="./assets/img/nft-logo.png"
+      href="./img/nft-logo.png"
       type="image/gif"
       sizes="16x16"
     />
@@ -34,7 +34,7 @@
       crossorigin="anonymous"
     />
     <!-- Custom css -->
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!-- Navbar starts here -->
@@ -42,7 +42,7 @@
     <nav class="navbar navbar-expand-lg fixed-top fixed-header">
       <div class="custom-container nav-row">
         <a class="navbar-brand pt-2" href="#">
-          <img src="./assets/img/nft-logo.svg" alt="NFT logo" />
+          <img src="./img/nft-logo.svg" alt="NFT logo" />
         </a>
         <button
           class="navbar-toggler float-right mt-3"
@@ -124,7 +124,7 @@
                 <div class="input-group-prepend">
                   <div class="input-group-text">
                     <img
-                      src="./assets/img/right-arrow.png"
+                      src="./img/right-arrow.png"
                       alt="right arrow"
                       class="right-arrow"
                     />
@@ -176,7 +176,7 @@
                     class="feature-block-icon d-flex justify-content-center h-100"
                   >
                     <img
-                      src="./assets/img/minting-icon.svg"
+                      src="./img/minting-icon.svg"
                       alt="Minting icon"
                       class="my-auto"
                       height="80px"
@@ -195,8 +195,7 @@
                     </p>
                     <ul class="block-content-list">
                       <li>14% to NFT Holders</li>
-                      <li>
-                        10% to referrals (if no referral exists then will be
+                      <li>10% to referrals (if no referral exists then will be
                         split between 5 & 6)
                       </li>
                       <li>4% to PAZ holders</li>
@@ -215,7 +214,7 @@
                     class="feature-block-icon d-flex justify-content-center h-100"
                   >
                     <img
-                      src="./assets/img/royalties-icon.svg"
+                      src="./img/royalties-icon.svg"
                       alt="Royalties icon"
                       class="my-auto"
                       height="80px"
@@ -241,8 +240,7 @@
                       <li>7% reflections to all NFT Holders</li>
                       <li>70% royalties to the original minter</li>
                       <li>0.05 BNB Listing Fee reflected to all NFT Holders</li>
-                      <li>
-                        0.05 BNB Delisting Fee reflected to all NFT Holders
+                      <li>0.05 BNB Delisting Fee reflected to all NFT Holders
                       </li>
                     </ul>
                   </div>
@@ -262,7 +260,7 @@
         <div class="row">
           <div class="col-md-6 d-flex justify-content-center">
             <img
-              src="./assets/img/japan-mecha.svg"
+              src="./img/japan-mecha.svg"
               alt="Mecha img"
               class="img-fluid mecha-img"
             />
@@ -303,21 +301,21 @@
         <div class="row">
           <div class="col-md-4">
             <img
-              src="./assets/img/artwork-1.svg"
+              src="./img/artwork-1.svg"
               alt="artwork 1"
               class="img-fluid artwork-1"
             />
           </div>
           <div class="col-md-4">
             <img
-              src="./assets/img/artwork-2.svg"
+              src="./img/artwork-2.svg"
               alt="artwork 2"
               class="img-fluid artwork-2"
             />
           </div>
           <div class="col-md-4">
             <img
-              src="./assets/img/artwork-3.svg"
+              src="./img/artwork-3.svg"
               alt="artwork 3"
               class="img-fluid artwork-3"
             />
@@ -417,7 +415,7 @@
                 role="tabpanel"
                 aria-labelledby="launch-roadmap-tab"
               >
-                <img src="./assets/img/boy.svg" alt="boy img" class="boy-img" />
+                <img src="./img/boy.svg" alt="boy img" class="boy-img" />
                 <div class="roadmap-step-block">
                   <div class="roadmap-step-header">
                     <p class="section-subheading mb-0">Step 01</p>
@@ -445,7 +443,7 @@
                 aria-labelledby="physical-part-tab"
               >
                 <img
-                  src="./assets/img/boy.svg"
+                  src="./img/boy.svg"
                   alt="robot img"
                   class="boy-img"
                 />
@@ -476,7 +474,7 @@
                 aria-labelledby="mekaverse-artists-tab"
               >
                 <img
-                  src="./assets/img/boy.svg"
+                  src="./img/boy.svg"
                   alt="robot img"
                   class="boy-img"
                 />
@@ -507,7 +505,7 @@
                 aria-labelledby="meka-multiverse-tab"
               >
                 <img
-                  src="./assets/img/boy.svg"
+                  src="./img/boy.svg"
                   alt="robot img"
                   class="boy-img"
                 />
@@ -538,7 +536,7 @@
                 aria-labelledby="future-mekas-tab"
               >
                 <img
-                  src="./assets/img/boy.svg"
+                  src="./img/boy.svg"
                   alt="robot img"
                   class="boy-img"
                 />
@@ -584,7 +582,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="step-card text-center">
-                <img src="./assets/img/step-1.svg" alt="selling step 1" />
+                <img src="./img/step-1.svg" alt="selling step 1" />
                 <h3 class="py-3">
                   Set up<br />
                   your wallet
@@ -597,7 +595,7 @@
             </div>
             <div class="col-md-4">
               <div class="step-card-2 text-center">
-                <img src="./assets/img/step-2.svg" alt="selling step 2" />
+                <img src="./img/step-2.svg" alt="selling step 2" />
                 <h3 class="py-3">Add your NFTs</h3>
                 <p class="pt-4">
                   Click on Connected in the header and select Create Sale.
@@ -607,7 +605,7 @@
             </div>
             <div class="col-md-4">
               <div class="step-card text-center">
-                <img src="./assets/img/step-3.svg" alt="selling step 3" />
+                <img src="./img/step-3.svg" alt="selling step 3" />
                 <h3 class="py-3">
                   List them<br />
                   for sale
@@ -629,7 +627,7 @@
               <div class="input-group-prepend">
                 <div class="input-group-text">
                   <img
-                    src="./assets/img/right-arrow.png"
+                    src="./img/right-arrow.png"
                     alt="right arrow"
                     class="right-arrow"
                   />
@@ -661,7 +659,7 @@
                 <div class="input-group-prepend">
                   <div class="input-group-text">
                     <img
-                      src="./assets/img/right-arrow.png"
+                      src="./img/right-arrow.png"
                       alt="right arrow"
                       class="right-arrow"
                     />
@@ -680,7 +678,7 @@
       <div class="custom-container">
         <div class="row">
           <div class="col-lg-6 col-md-4 footer-logo">
-            <img src="./assets/img/nft-logo.svg" alt="NFT logo" />
+            <img src="./img/nft-logo.svg" alt="NFT logo" />
           </div>
           <div class="col-lg-6 col-md-8">
             <ul class="pt-3 footer-links">
@@ -702,7 +700,7 @@
               <li class="pr-2">
                 <a href="">
                   <img
-                    src="./assets/img/mail-icon.svg"
+                    src="./img/mail-icon.svg"
                     alt="mail icon"
                     class="social-icon"
                     width="45px"
@@ -712,7 +710,7 @@
               <li class="pr-2">
                 <a href="">
                   <img
-                    src="./assets/img/facebook-icon.svg"
+                    src="./img/facebook-icon.svg"
                     alt="facebook icon"
                     class="social-icon"
                     width="45px"
@@ -722,7 +720,7 @@
               <li class="pr-2">
                 <a href="">
                   <img
-                    src="./assets/img/twitter-icon.svg"
+                    src="./img/twitter-icon.svg"
                     alt="twitter icon"
                     class="social-icon"
                     width="45px"
@@ -732,7 +730,7 @@
               <li class="pr-2">
                 <a href="">
                   <img
-                    src="./assets/img/telegram-icon.svg"
+                    src="./img/telegram-icon.svg"
                     alt="telegram icon"
                     class="social-icon"
                     width="45px"
@@ -742,7 +740,7 @@
               <li class="pr-2">
                 <a href="">
                   <img
-                    src="./assets/img/ticktok-icon.svg"
+                    src="./img/ticktok-icon.svg"
                     alt="ticktok icon"
                     class="social-icon"
                     width="45px"
